--- a/astro-project/.gitignore
+++ b/astro-project/.gitignore
@@ -162,3 +162,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 capstone-project-451604-70c92207f679.json
+.idea/
+.capstone_review_comments.txt
+./dbdiagram.txt
